--- a/styles/source/_main.scss
+++ b/styles/source/_main.scss
@@ -66,6 +66,8 @@ h1 {
   text-transform: uppercase;
   font-size: 2em;
   color: $tt-red;
+  margin-top: 10px;
+  padding-top: 10px;
 }
 h2 {
   color:$tt-yellow;
